# REMS-For-Organisations

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  cds-admin.php  cds-public.php  dashboard.php  docker-compose.yml  docker-run-compose.sh  docker-run-vanilla.sh  header.php  index.php  member-login.php  pyproject.toml  requirements.txt  validate.php
.github/: main.workflow  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  phplint.yml
CDS_Admin/Uploaded files/: Ignored_this_file
assets/css/: custom.css  dark-mode.css
assets/js/: bs-init.js  dark-mode.js  theme.js
docker/: app-entrypoint.sh  secrets_.php
docker/mysql/: database.sql  init-db.sh
docs/files/: Sample_CMS_Database.sql  Sample_REMS_Database.sql
members/: 404.php  activity-log.php  cds-admin.php  change-password.php  dashboard.php  db-manage.php  forgot-password.php  header.php  link-expired.html  link-short.php  logout.php  mail-list.php  mailer.php  mainFunction.php  member-login.php  navigation.php  profile.php  secrets.php  secrets.php_  settings.php  test.php  validate.php
members/CDS_Admin/: Sample_headers.csv
members/db-ops/: delete.php  insert.php  modify.php  pushAlert.php
members/form-gen/: index.php  toCSV.php  view-reg.php
members/form-generator/: form_generator.php
members/mailer-templates/: forgot_pwd_temp.php  make_mail.php  preview_mail.js
migrations/: env.py
public/: bad-request.html  cds-public.php  congrats.html  entry.php  error.html  pheader.php  thankyou.html
(+62 files in other folders)
